<?xml version="1.0"?>
<package format="2">
  <name>emplaner</name>
  <version>0.0.0</version>
  <description>The emplaner package</description>


  <maintainer email="big_jian@todo.todo">big_jian</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend> -->

  <depend>std_msgs</depend>
  <depend>sleipnir_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>routing_msgs</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_extension</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
